--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
       <!-- FIRST INPUT -->
       <div class="input" id="input">
         <label for="day" class="data__label" id="day-label">Day</label>
-        <input type="text" id="day-input" name="day" placeholder="DD">
-        <span class="error__msg" id="error-msg"></span>
+        <input type="text" class="input__correct__state" id="day-input" name="day" placeholder="DD">
+        <span class="error__msg" id="day-error-msg"></span>
       </div>
 
       <!-- SECOND INPUT -->
       <div class="input" id="input">
         <label for="month" class="data__label" id="month-label">Month</label>
-        <input type="text" id="month-input" name="month" placeholder="MM">
-        <span class="error__msg" id="error-msg"></span>
+        <input type="text" class="input__correct__state" id="month-input" name="month" placeholder="MM">
+        <span class="error__msg" id="month-error-msg"></span>
       </div>
 
       <!-- THIRD INPUT -->
       <div class="input" id="input">
         <label for="year" class="data__label" id="year-label">Year</label>
-        <input type="text" id="year-input" name="year" placeholder="YYYY">
-        <span class="error__msg" id="error-msg">this field is required</span>
+        <input type="text" class="input__correct__state" id="year-input" name="year" placeholder="YYYY">
+        <span class="error__msg" id="year-error-msg"></span>
       </div>
     </div>
 
@@ -82,5 +82,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <link rel="stylesheet" href="resources/js/validate.js">
 </body>
 </html>
