age calculation function addedbut does not work as expected

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
 
     <div class="result__container">
       <div class="data__display">
-        <p class="years__display" id="years-diaplay">--</p>
+        <p class="years__display" id="years-display">--</p>
         <span>years</span>
       </div>
 
       <div class="data__display">
-        <p class="months__display" id="months-diaplay">--</p>
+        <p class="months__display" id="months-display">--</p>
         <span>months</span>
       </div>
 
       <div class="data__display">
-        <p class="days__display" id="months-diaplay">--</p>
+        <p class="days__display" id="days-display">--</p>
         <span>days</span>
       </div>
     </div>
