--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
     <div class="input__container">
 
       <!-- FIRST INPUT -->
-      <div class="input" id="input">
-        <label for="day" class="data__label" id="day-label">Day</label>
+      <div class="input">
+        <label for="day" class="data__label correct__state__color" id="day-label">Day</label>
         <input type="number" class="input__correct__state" id="day-input" name="day" placeholder="DD">
         <span class="error__msg" id="day-error-msg"></span>
       </div>
 
       <!-- SECOND INPUT -->
-      <div class="input" id="input">
-        <label for="month" class="data__label" id="month-label">Month</label>
+      <div class="input">
+        <label for="month" class="data__label correct__state__color" id="month-label">Month</label>
         <input type="number" class="input__correct__state" id="month-input" name="month" placeholder="MM">
         <span class="error__msg" id="month-error-msg"></span>
       </div>
 
       <!-- THIRD INPUT -->
-      <div class="input" id="input">
-        <label for="year" class="data__label" id="year-label">Year</label>
+      <div class="input">
+        <label for="year" class="data__label correct__state__color" id="year-label">Year</label>
         <input type="number" class="input__correct__state" id="year-input" name="year" placeholder="YYYY">
         <span class="error__msg" id="year-error-msg"></span>
       </div>
